feat: enhance MAL import functionality with new UI and hooks
- Refactor mal-import screen to support grid and list views for displaying books
- Introduce new hooks: useMalFetch and useMalConfirmImport for fetching and confirming imports
- Update translations for improved user experience during the import process
- Add visual feedback and selection indicators for imported books
- Improve error handling and user prompts for better interaction

This update significantly enhances the MAL import feature, providing users with a more interactive and visually appealing experience.

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -986,25 +986,32 @@
         "description": "Enter your MyAnimeList username to import your manga library. Your MAL account must be public for this to work.",
         "usernameLabel": "MAL Username",
         "usernamePlaceholder": "Enter your MAL username",
-        "importButton": "Import Library",
+        "fetchButton": "Search Library",
+        "fetching": "Searching...",
         "importing": "Importing...",
-        "success": "{{count}} book(s) imported successfully!",
+        "confirm": "Confirm",
+        "cancel": "Cancel",
+        "selectAll": "Select all",
+        "deselectAll": "Deselect all",
+        "foundBooks": "{{count}} book(s) found!",
+        "importSuccess": "{{count}} book(s) imported successfully!",
         "noNewBooks": "No new books to import",
-        "done": "Done",
+        "alreadyExistsCount": "{{count}} already in library",
+        "notFoundCount": "{{count}} not found",
         "note": "Only manga entries will be imported. Make sure your MAL list is set to public.",
         "errors": {
             "usernameTooShort": "Username must be at least 2 characters",
             "userNotFound": "MAL user not found. Make sure the username is correct and the profile is public.",
             "importFailed": "Failed to import from MyAnimeList. Please try again.",
-            "generic": "An error occurred. Please try again."
+            "generic": "An error occurred. Please try again.",
+            "noSelection": "Please select at least one book"
         },
         "results": {
-            "title": "Import Results",
-            "imported": "Imported",
-            "alreadyExists": "Already in library",
+            "title": "Results",
+            "found": "Found",
+            "alreadyExists": "Already exists",
             "notFound": "Not found",
-            "notFoundList": "Books not found on Trackr:",
-            "alreadyExistsList": "Books already in your library:",
+            "notFoundList": "Not found on Trackr",
             "andMore": "and {{count}} more..."
         }
     },
