--- a/locales/fr/translation.json
+++ b/locales/fr/translation.json
@@ -987,25 +987,32 @@
         "description": "Entrez votre nom d'utilisateur MyAnimeList pour importer votre bibliothèque de mangas. Votre compte MAL doit être public pour que cela fonctionne.",
         "usernameLabel": "Nom d'utilisateur MAL",
         "usernamePlaceholder": "Entrez votre nom d'utilisateur MAL",
-        "importButton": "Importer la bibliothèque",
-        "importing": "Import en cours...",
-        "success": "{{count}} livre(s) importé(s) avec succès !",
+        "fetchButton": "Rechercher la bibliothèque",
+        "fetching": "Recherche en cours...",
+        "importing": "Import...",
+        "confirm": "Valider",
+        "cancel": "Annuler",
+        "selectAll": "Tout sélectionner",
+        "deselectAll": "Tout désélectionner",
+        "foundBooks": "{{count}} livre(s) trouvé(s) !",
+        "importSuccess": "{{count}} livre(s) importé(s) avec succès !",
         "noNewBooks": "Aucun nouveau livre à importer",
-        "done": "Terminé",
+        "alreadyExistsCount": "{{count}} déjà présent(s)",
+        "notFoundCount": "{{count}} non trouvé(s)",
         "note": "Seules les entrées manga seront importées. Assurez-vous que votre liste MAL est publique.",
         "errors": {
             "usernameTooShort": "Le nom d'utilisateur doit contenir au moins 2 caractères",
             "userNotFound": "Utilisateur MAL introuvable. Vérifiez que le nom d'utilisateur est correct et que le profil est public.",
             "importFailed": "Échec de l'import depuis MyAnimeList. Veuillez réessayer.",
-            "generic": "Une erreur est survenue. Veuillez réessayer."
+            "generic": "Une erreur est survenue. Veuillez réessayer.",
+            "noSelection": "Veuillez sélectionner au moins un livre"
         },
         "results": {
-            "title": "Résultats de l'import",
-            "imported": "Importés",
-            "alreadyExists": "Déjà en bibliothèque",
+            "title": "Résultats",
+            "found": "Trouvés",
+            "alreadyExists": "Déjà présents",
             "notFound": "Non trouvés",
-            "notFoundList": "Livres non trouvés sur Trackr :",
-            "alreadyExistsList": "Livres déjà dans votre bibliothèque :",
+            "notFoundList": "Non trouvés sur Trackr",
             "andMore": "et {{count}} de plus..."
         }
     },
