--- a/locales/fr/translation.json
+++ b/locales/fr/translation.json
@@ -128,6 +128,15 @@
             "invalidToken": "Token de réinitialisation invalide",
             "tokenExpired": "Ce lien a expiré. Veuillez en demander un nouveau.",
             "errorResetting": "Échec de la réinitialisation. Veuillez réessayer."
+        },
+        "verifyEmail": {
+            "title": "Verifiez votre email",
+            "subtitle": "Nous avons envoye un lien a {{email}}",
+            "description": "Ouvrez le lien dans votre email pour verifier votre compte. Vous pouvez demander un nouveau lien s'il a expire.",
+            "resendButton": "Renvoyer le lien",
+            "resent": "Email de verification envoye",
+            "missingEmail": "Veuillez entrer votre email",
+            "changeEmail": "Utiliser un autre email"
         }
     },
     "status": {
@@ -735,6 +744,7 @@
         "AUTH_GOOGLE_DENIED": "L'authentification Google a été refusée",
         "AUTH_GOOGLE_FAILED": "L'authentification Google a échoué. Veuillez réessayer",
         "AUTH_INVALID_REFRESH_TOKEN": "Votre session a expiré. Veuillez vous reconnecter",
+        "AUTH_EMAIL_NOT_VERIFIED": "Veuillez verifier votre email avant de vous connecter",
 
         "USER_NOT_FOUND": "Utilisateur introuvable",
         "USER_USERNAME_INVALID": "Format de nom d'utilisateur invalide",
